--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "compile-router": "npx typechain --target ethers-v5 --out-dir src/types/other './node_modules/@uniswap/swap-router-contracts/artifacts/contracts/**/*.json'",
     "compile-narwhal": "npx typechain --target ethers-v5 --out-dir src/types/other './node_modules/@uniswap/narwhal/artifacts/contracts/**/*.json'",
     "compile-external-types": "npx typechain --target ethers-v5 --out-dir src/types/other 'src/abis/**/*.json'",
-    "build": "run-p compile-v3-types compile-v2-types compile-router compile-narwhal compile-external-types && run-p build:*",
+    "build": "run-p compile-v3-types compile-v2-types compile-router compile-external-types && run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
     "fix": "run-s fix:*",
@@ -34,14 +34,14 @@
     "@types/brotli": "^1.3.4",
     "@uniswap/default-token-list": "^11.2.0",
     "@uniswap/permit2-sdk": "^1.2.0",
-    "@uniswap/router-sdk": "^1.6.0",
-    "@uniswap/sdk-core": "^4.0.7",
+    "@uniswap/router-sdk": "github:Pearl-Finance/router-sdk",
+    "@uniswap/sdk-core": "github:Pearl-Finance/sdk-core",
     "@uniswap/swap-router-contracts": "^1.3.0",
     "@uniswap/token-lists": "^1.0.0-beta.31",
     "@uniswap/universal-router": "^1.0.1",
-    "@uniswap/universal-router-sdk": "^1.5.8",
+    "@uniswap/universal-router-sdk": "github:Pearl-Finance/universal-router-sdk",
     "@uniswap/v2-sdk": "^3.2.3",
-    "@uniswap/v3-sdk": "^3.10.0",
+    "@uniswap/v3-sdk": "github:Pearl-Finance/v3-sdk",
     "async-retry": "^1.3.1",
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
