--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@uniswap/token-lists": "^1.0.0-beta.31",
     "@uniswap/universal-router": "^1.0.1",
     "@uniswap/universal-router-sdk": "github:Pearl-Finance/universal-router-sdk",
-    "@uniswap/v2-sdk": "^3.2.3",
+    "@uniswap/v2-sdk": "github:Pearl-Finance/v2-sdk",
     "@uniswap/v3-sdk": "github:Pearl-Finance/v3-sdk",
     "async-retry": "^1.3.1",
     "await-timeout": "^1.1.1",
