--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -514,7 +514,7 @@ jobs:
       - name: Run Integration tests
         run: npm run integ-test  -- -t 'quote for other networks * sepolia'
         env:
-          JSON_RPC_PROVIDER_GORLI: ${{ secrets.JSON_RPC_PROVIDER_SEPOLIA }}
+          JSON_RPC_PROVIDER_SEPOLIA: ${{ secrets.JSON_RPC_PROVIDER_SEPOLIA }}
           TENDERLY_BASE_URL: ${{ secrets.TENDERLY_BASE_URL }}
           TENDERLY_USER: ${{ secrets.TENDERLY_USER }}
           TENDERLY_PROJECT: ${{ secrets.TENDERLY_PROJECT }}
