--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node": ">=10"
   },
   "dependencies": {
+    "@eth-optimism/sdk": "^3.2.2",
     "@types/brotli": "^1.3.4",
     "@uniswap/default-token-list": "^11.13.0",
     "@uniswap/permit2-sdk": "^1.2.0",
