--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hemilabs/smart-order-router",
-  "version": "3.26.1-beta.4",
+  "version": "3.26.1-beta.5",
   "description": "Uniswap Smart Order Router",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -25,7 +25,8 @@
     "fix:lint": "eslint src --ext .ts --fix",
     "prepare-release": "run-s cov:check doc:html version doc:publish",
     "test": "jest test/unit",
-    "integ-test": "TS_NODE=true jest test/integ --testRunner='jest-circus/runner'"
+    "integ-test": "TS_NODE=true jest test/integ --testRunner='jest-circus/runner'",
+    "prepublish": "npm run build"
   },
   "engines": {
     "node": ">=10"
