--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -685,7 +685,7 @@ jobs:
       - name: Run Integration tests
         run: npm run integ-test  -- -t 'quote for other networks * zora'
         env:
-          JSON_RPC_PROVIDER_BLAST: ${{ secrets.JSON_RPC_PROVIDER_BLAST }}
+          JSON_RPC_PROVIDER_BLAST: ${{ secrets.JSON_RPC_PROVIDER_ZORA }}
           TENDERLY_BASE_URL: ${{ secrets.TENDERLY_BASE_URL }}
           TENDERLY_USER: ${{ secrets.TENDERLY_USER }}
           TENDERLY_PROJECT: ${{ secrets.TENDERLY_PROJECT }}
