--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
     "@eth-optimism/sdk": "^3.2.2",
     "@types/brotli": "^1.3.4",
     "@uniswap/default-token-list": "^11.13.0",
-    "@uniswap/permit2-sdk": "^1.2.0",
-    "@uniswap/router-sdk": "^1.9.2",
-    "@uniswap/sdk-core": "^5.0.0",
+    "@nizaglobal/permit2-sdk": "^1.0.2",
+    "@nizaglobal/router-sdk": "1.0.2",
+    "@nizaglobal/sdk-core": "1.0.2",
     "@uniswap/swap-router-contracts": "^1.3.1",
     "@uniswap/token-lists": "^1.0.0-beta.31",
     "@uniswap/universal-router": "^1.6.0",
-    "@uniswap/universal-router-sdk": "^2.1.0",
-    "@uniswap/v2-sdk": "^4.3.2",
-    "@uniswap/v3-sdk": "^3.11.2",
+    "@nizaglobal/universal-router-sdk": "1.1.1",
+    "@nizaglobal/v2-sdk": "1.0.1",
+    "@nizaglobal/v3-sdk": "1.0.5",
     "async-retry": "^1.3.1",
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
