--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@uniswap/swap-router-contracts": "^1.3.1",
     "@uniswap/token-lists": "^1.0.0-beta.31",
     "@uniswap/universal-router": "^1.6.0",
-    "@uniswap/universal-router-sdk": "file:/Users/siyu.jiang/workspace/sdks/sdks/universal-router-sdk/package.tgz",
+    "@uniswap/universal-router-sdk": "^2.2.0",
     "@uniswap/v2-sdk": "^4.3.2",
     "@uniswap/v3-sdk": "^3.13.0",
     "async-retry": "^1.3.1",
