--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,8 @@ jobs:
     name: Release
     environment:
       name: release
-    runs-on: ubuntu-latest
+    runs-on:
+      group: npm-deploy
     steps:
       - name: Load Secrets
         uses: 1password/load-secrets-action@581a835fb51b8e7ec56b71cf2ffddd7e68bb25e0
@@ -18,7 +19,7 @@ jobs:
           export-env: true
         env:
           OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
-          NPM_TOKEN: op://sdk-npm-deploys/npm-token/secret
+          NPM_TOKEN: op://sdk-npm-deploys/npm-runner-token/secret
       
       - name: Checkout
         uses: actions/checkout@v4
