--- a/.github/workflows/npm-audit-fix.yml
+++ b/.github/workflows/npm-audit-fix.yml
@@ -1,4 +1,4 @@
-name: npm audit fix
+name: NPM audit fix
 
 on:
   workflow_dispatch: # manually
@@ -6,10 +6,16 @@ on:
 jobs:
   npm-audit-fix:
     runs-on: ubuntu-latest
-    commit_title: "chore(deps): update npm dependencies"
     permissions:
       contents: write
       pull-requests: write
     steps:
-      - uses: actions/checkout@v3
-      - uses: ybiquitous/npm-audit-fix-action@e7e5e66fe613cd5e556db66eef24156b4bfa6134
+      - name: Check out Git repository
+        uses: actions/checkout@v3
+      - name: Use npm audit fix
+        uses: ybiquitous/npm-audit-fix-action@e7e5e66fe613cd5e556db66eef24156b4bfa6134
+          with: 
+            commit_title: "chore(deps): update npm dependencies"
+            default_branch: "main"
+            description: "Run npm audit fix"
+            branch: "fix/npm-audit-fix"
