--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on:
       group: npm-deploy
     permissions:
-      contents: read
+      contents: write
       id-token: write
     steps:
       - name: Load Secrets
